--- a/OlinJa/build.gradle
+++ b/OlinJa/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "18.1.1"
+    buildToolsVersion '18.1.1'
 
     defaultConfig {
         minSdkVersion 11
@@ -23,5 +23,6 @@ android {
 }
 
 dependencies {
-	compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:appcompat-v7:+'
+    compile files('src/main/libs/firebase.jar')
 }
