--- a/OlinJa/src/main/AndroidManifest.xml
+++ b/OlinJa/src/main/AndroidManifest.xml
@@ -40,7 +40,10 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
